# test_actix

./: .env  Cargo.toml  README.md
migrations/2021-03-27-023147_create_employees/: up.sql
migrations/2021-03-29-015652_createUsers/: up.sql
src/: main.rs  schema.rs
src/application/: mod.rs
src/application/employees/: employeeRoute.rs
src/employees/: mod.rs
src/models/: user.rs
