[package]
name = "test_actix"
version = "0.1.0"
authors = ["JuanGiacalone <juanpablogiacalone8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-rt = "2.1"
listenfd = "0.3"
serde = "1.0"
serde_json = "1.0"
diesel = { version = "1.4.6", features = ["postgres"] }

